<resources>

    <string name="menu_home">Home</string>
    <string name="menu_clients">Clients</string>
    <string name="menu_maintain">Maintain</string>
    <string name="menu_diesel">Diesel</string>
    <string name="menu_setting">Setting</string>

    <string name="app_name">Traget</string>
    <string name="home_label_total_paid">Total Paid Amount - </string>
    <string name="home_label_total_unpaid">Total UnPaid Amount - </string>
    <string name="home_label_total_maintain">Total Maintenance Amount - </string>
    <string name="home_label_total_diesel">Total Diesel Amount - </string>
    <string name="home_paidSum_str"> %1$d Ks</string>
    <string name="home_unPaidSum_str">%1$d Ks</string>
    <string name="home_maintainSum_str">%1$d Ks</string>
    <string name="home_dieselSum_str">%1$d Ks</string>
    <string name="home_barchart_caption">Cash Incomes and Outgoings</string>
    <string name="home_piechart_caption">Tractor Running Times</string>

    <string name="pie_rv_label"> %1$d Hr %2$d Min</string>
    <string name="home_label_total_rv">Total Rotavator Running Time - </string>
    <string name="home_label_total_hr">Total Harrow Running Time - </string>
    <string name="home_rv_time">%1$d Hr %2$d Min</string>
    <string name="home_hr_time">%1$d Hr %2$d Min</string>

    <string name="item_no">%1$d .</string>
    <string name="rv_str">Rotavator</string>
    <string name="hr_str">Harrow</string>
    <string name="rv_short_str">(RV)</string>
    <string name="hr_short_str">(HR)</string>
    <string name="client_time_str">%1$d : %2$d</string>
    <string name="client_amt_str">%1$d Ks</string>

    <string name="diesel_item_profit_hint">Earned From the Barrel - </string>
    <string name="diesel_item_rv_time_hint">Rotavator Running - </string>
    <string name="diesel_item_hr_time_hint">Harrow Running - </string>


    <string name="maintain_item_no_str">%1$d .</string>
    <string name="maintain_price_str">%1$d Ks</string>
    <string name="maintain_add_caption">Add New Maintenance</string>
    <string name="maintain_edit_caption">Edit Maintenance</string>
    <string name="maintain_name_hint">Maintenance Name</string>
    <string name="maintain_cost_hint">Maintenance Cost</string>

    <string name="chang_lang_hint">Change App Language</string>
    <string name="rv_price_str">RV Fee Per Hr</string>
    <string name="hr_price_str">HR Fee Per Hr</string>
    <string name="change_theme_hint">Change App Theme</string>
    <string name="upload_hint">Upload Data to Cloud</string>
    <string name="download_hint">Download Data from Cloud</string>


    <string name="diesel_price_hint_str">Price Per Barrel</string>

    <string name="created_date_str">Created Date - %1$s</string>
    <string name="name_hint_str">Name</string>
    <string name="timetaken_hint_str">Time Taken</string>
    <string name="timetaken_str"> %1$d Hr %2$d Min</string>
    <string name="note_hint_str">Additional Note</string>
    <string name="diesel_hint_str">Diesel No.</string>
    <string name="cancelBtn_str">Cancel</string>
    <string name="editBtn_str">Edit</string>
    <string name="applyBtn_str">Apply</string>

    <string name="bs_timepicker_caption" translatable="false">Choose the Time Below</string>
    <string name="client_add_caption">Client Item Addition</string>
    <string name="client_edit_caption">Client Item Edition</string>


    <string name="client_pay_alert">Put %1$s to %2$s list?</string>
    <string name="client_delete_alert">Delete %1$s from the list?</string>
    <string name="maintain_delete_alert">Delete this item from the list?</string>


</resources>