<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/bs_tp_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bs_timepicker_caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/textcaption"/>

    <TimePicker
        android:id="@+id/dialog_tp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bs_tp_caption" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/dialog_tp_cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelBtn_str"
        app:layout_constraintTop_toTopOf="@id/dialog_tp_applyBtn"
        app:layout_constraintEnd_toStartOf="@id/dialog_tp_applyBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_tp_applyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applyBtn_str"
        app:backgroundTint="@color/fabColor"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_tp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_tp_cancelBtn"
        />
</androidx.constraintlayout.widget.ConstraintLayout>