<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:background="#DEEAF1">

  <TextView
      android:id="@+id/tot_per_ds_amtlabel_tv"
      style="@style/labeltextstyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="15dp"
      android:layout_marginBottom="7dp"
      android:text="@string/diesel_item_profit_hint" />

  <TextView
      android:id="@+id/tot_per_ds_amt_tv"
      style="@style/labeltextstyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@id/tot_per_ds_amtlabel_tv"
      android:layout_marginStart="10dp"
      android:layout_toEndOf="@id/tot_per_ds_amtlabel_tv"
      android:text="0 Ks" />

  <TextView
      android:id="@+id/tot_per_ds_rvlabel_tv"
      style="@style/labeltextstyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tot_per_ds_amtlabel_tv"
      android:layout_alignStart="@id/tot_per_ds_amtlabel_tv"
      android:layout_marginBottom="7dp"
      android:text="@string/diesel_item_rv_time_hint" />

  <TextView
      android:id="@+id/tot_per_ds_rv_tv"
      style="@style/labeltextstyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@id/tot_per_ds_rvlabel_tv"
      android:layout_marginStart="10dp"
      android:layout_toEndOf="@id/tot_per_ds_rvlabel_tv"
      android:text="0 Min" />

  <TextView
      android:id="@+id/tot_per_ds_hrlabel_tv"
      style="@style/labeltextstyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/tot_per_ds_rvlabel_tv"
      android:layout_alignStart="@id/tot_per_ds_amtlabel_tv"
      android:text="@string/diesel_item_hr_time_hint" />

  <TextView
      android:id="@+id/tot_per_ds_hr_tv"
      style="@style/labeltextstyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@id/tot_per_ds_hrlabel_tv"
      android:layout_marginStart="10dp"
      android:layout_marginBottom="15dp"
      android:layout_toEndOf="@id/tot_per_ds_hrlabel_tv"
      android:text="0 Min" />
</RelativeLayout>